Attempt to fix positioning of Ashley on mobile screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -138,7 +138,7 @@ $splash-height: min(80vw, 80vh);
     // transition-property: background-position;
     // transition-duration: 4s;
     // transform: scaleX(-1);
-    position: fixed;
+    position: absolute;
     // top: 60px;
     // left: 50px;
     // box-sizing: border-box;
